--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,4 @@
-body { background-color:#FEFFFE; color:#181A19; font-family:Garamond, "Palatino Linotype", "Book Antiqua", Palatino, serif; }
-
+body { background-color:#FFFFFF; /*background-color:#FEFFFE*/ color:#000000; /*color:#181A19;*/ font-family:Garamond, "Palatino Linotype", "Book Antiqua", Palatino, serif; }
 
 div.page { margin:0 14% 10% 14%; }
 
@@ -9,13 +8,13 @@ p.toolbar { text-align:center; margin:-34px 0 44px; }
 
 div.flash { font-style:italic; font-size:16px; text-align:center; margin-top:-24px; }
 
-a:link { color:#181A19; text-decoration:none; }
+a:link { color:#000000; /*color:#181A19;*/ text-decoration:none; }
 
-a:visited { color:#181A19; text-decoration:none; }
+a:visited { color:#000000; /*color:#181A19;*/ text-decoration:none; }
 
 a:hover { /*color:#626664;*/ color:#7A807D; text-decoration:none; }
 
-a:active { color:#181A19; text-decoration:none; }
+a:active { color:#000000; /*color:#181A19;*/ text-decoration:none; }
 
 input, textarea { /*Source: http://css-tricks.com/styling-texty-inputs-only/*/
 font-family:Garamond, "Palatino Linotype", "Book Antiqua", Palatino, serif;
