--- a/templates/details.html
+++ b/templates/details.html
@@ -6,7 +6,7 @@
 
 <p class='toolbar'>
 <a href={{ url_for('edit_view', _id=post.id) }}>Edit</a> | 
-<a href={{ url_for('delete_view', id=post.id ) }} onclick='return confirm('Are you positive you want to delete this post?');'>Delete</a> |
+<a href={{ url_for('delete_view', id=post.id ) }} onclick="return confirm('Are you positive you want to delete this post?');">Delete</a> |
 <a href={{ url_for('add_view') }}>Write</a> |
 <a href={{ url_for('logout_view') }}>Sign Out</a></p>
 
