--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,7 +4,7 @@
 
 <p class='toolbar'>
 <a href={{ url_for('details_view', id=post.id) }}>Abort</a> | 
-<a href={{ url_for('delete_view', id=post.id) }} onclick='return confirm('Are you positive you want to delete this post?');'>Delete</a> | 
+<a href={{ url_for('delete_view', id=post.id) }} onclick="return confirm('Are you positive you want to delete this post?');">Delete</a> | 
 <a href={{ url_for('add_view') }}>Write</a> | 
 <a href={{ url_for('logout_view') }}>Sign Out</a></p>
 
